--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter_redux: ^0.5.2
   font_awesome_flutter: ^7.1.0
   rxdart: "^0.18.1"
+  qr_flutter: ^1.1.3
 
 dev_dependencies:
   flutter_test:
