--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ dependencies:
   font_awesome_flutter: ^7.1.0
   rxdart: "^0.18.1"
   qr_flutter: ^1.1.3
+  # web3j dependencies
+  pointycastle: "^1.0.0-rc1"
+  convert: "^2.0.1"
+  meta: "^1.1.2"
+  http: "^0.11.3+16"
+  tuple: "^1.0.1"
+  uuid: "^1.0.0"
 
 dev_dependencies:
   flutter_test:
