--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: l_token
-description: A new Flutter project.
+description: A Flutter project of Wallet.
 
 dependencies:
   flutter:
@@ -10,7 +10,10 @@ dependencies:
   flutter_redux: ^0.5.2
   font_awesome_flutter: ^8.2.0
   rxdart: "^0.18.1"
+  # QR code
   qr_flutter: ^1.1.3
+  # network framework
+  dio: ^1.0.13
   # web3j dependencies
   pointycastle: "^1.0.0-rc1"
   convert: "^2.0.1"
@@ -18,6 +21,7 @@ dependencies:
   http: "^0.11.3+16"
   tuple: "^1.0.1"
   uuid: "^1.0.0"
+
 
 dev_dependencies:
   flutter_test:
